# pqrascv-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  markdown.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/pqrascv-core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/pqrascv-core/src/: config.rs  crypto.rs  error.rs  lib.rs  measurement.rs  provenance.rs  quote.rs
crates/pqrascv-core/src/backends/: dice.rs  mod.rs  software.rs  tpm.rs
crates/pqrascv-core/tests/: integration_test.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: quote_roundtrip.rs
