[workspace]
resolver = "2"
members = [
    "crates/pqrascv-core",
    "crates/verifier",
    "crates/cli",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.85"
authors       = ["comwanga"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/comwanga/pqrascv-core"
keywords      = ["attestation", "post-quantum", "no_std", "embedded", "supply-chain"]
categories    = ["cryptography", "embedded", "no-std"]

[workspace.dependencies]
# Serialization
serde       = { version = "1",           default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11",        default-features = false, features = ["alloc"] }
ciborium    = { version = "0.2",         default-features = false }

# Post-Quantum Cryptography (RustCrypto — pre-release; stable not yet published)
ml-dsa      = { version = "0.1.0-rc.8",  default-features = false, features = ["rand_core"] }

# Hashing
sha3        = { version = "0.10",        default-features = false }

# Memory safety
zeroize     = { version = "1",           default-features = false, features = ["derive"] }

# RNG
getrandom   = { version = "0.4",         features = ["sys_rng"] }

# TPM 2.0 backend (hardware-tpm feature only)
tss-esapi   = { version = "8.0.0-alpha.2" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
